--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   ],
   "author": "Evangelina",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^4.21.0"
+  }
 }
