--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "express": "^4.21.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.3"
+    "mongoose": "^8.6.3",
+    "nodemailer": "^6.9.15",
+    "nodemailer-express-handlebars": "^6.1.2 "
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
@@ -29,6 +31,8 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
+    "@types/nodemailer": "^6.4.16",
+    "@types/nodemailer-express-handlebars": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
     "eslint": "^8.57.1",
