--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cron": "^3.1.7",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "joi": "^17.13.3",
